<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="about_dev">About Developer</string>
    <string name="street_hint">Please enter an address</string>
    <string name="city_hint">Please enter the city</string>
    <string name="text_state">State</string>
    <string name="text_degree">Degree</string>
    <string name="text_search">Search</string>
    <string name="text_clear">Clear</string>
    <string name="text_fahr">Fahrenheit</string>
    <string name="text_cels">Celsius</string>
    <string-array name="state_array">
        <item>Select your state</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="web_page">http://webtech.elasticbeanstalk.com/process.php</string>
    <string name="forecast_image_folder">http://webtech.elasticbeanstalk.com/forecast-images/</string>
    <string name="request">http://cs-server.usc.edu:20414/hw8/process.php</string>
    <string name="title_activity_about_dev">About Developer</string>
    <string name="title_activity_result">Current Weather</string>
    <string name="dev_name">Name: Yermek Zhanabayev</string>
    <string name="dev_id">Student ID: 5173409634</string>
    <string name="footer">Powered by </string>
    <string name="footer_forecast"><a href="http://www.forecast.io">FORECAST.IO</a></string>
    <string name="menu_details">View in Details</string>
    <string name="menu_map">View On Map</string>
    <string name="menu_facebook">Share on Facebook</string>
    <string name="img_content_desc">Image for the current weather</string>
    <string name="precip">Precipitation</string>
    <string name="rain">Chance of Rain</string>
    <string name="wind">Wind Speed</string>
    <string name="point">Dew Point</string>
    <string name="humid">Humidity</string>
    <string name="visib">Visibility</string>
    <string name="rise">Sunrise</string>
    <string name="set">Sunset</string>
    <string name="temp_div"> | </string>
    <string name="title_activity_details">Detailed View</string>
    <string name="title_activity_map">Map View</string>
    <string name="action_settings">Settings</string>
    <string-array name="nav_drawer_labels">
        <item>Home</item>
        <item>Credits</item>
        <item>Settings</item>
        <item>Change Theme</item>
        <item>About Developer</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_credits">Credits</string>
    <string name="dummy_body">Edit corresponding XML file to change the appearance</string>
    <string name="icon">Icon</string>
    <string name="temp">Temperature</string>
    <string name="time">Time</string>
    <string name="load">Load More</string>
    <string name="title_activity_weather_map">Weather Map</string>
    <string name="aeris_client_id">TN8Itu8Q679dZLvncL37h</string>
    <string name="aeris_client_secret">KNNIxtRDv8PZrpmLtWbsbPqsh983zY0KYCSCZLuX</string>
    <string name="title_activity_aeris_map">Aeris Weather Map</string>
    <string name="facebook_app_id">491432991030465</string>
</resources>
