<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:elevation="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_search"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorTextInverse"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorTextInverse">

            <EditText
                android:id="@+id/edit_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/street_hint"
                android:textColor="@color/colorTextInverse" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorTextInverse">

            <EditText
                android:id="@+id/edit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/city_hint"
                android:textColor="@color/colorTextInverse" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_states"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="35dp"
                android:text="@string/text_state"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextInverse" />

            <Spinner
                android:id="@+id/spinner_states"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:focusableInTouchMode="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/degGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal"
                android:saveEnabled="true">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:text="@string/text_degree"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorTextInverse" />

                <RadioButton
                    android:id="@+id/radio_fahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/text_fahr"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorTextInverse" />

                <RadioButton
                    android:id="@+id/radio_celsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/text_cels"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorTextInverse" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="60dp"
                android:background="@color/colorSearch"
                android:shadowColor="@color/colorBackground"
                android:text="@string/text_search"
                android:textColor="@color/colorTextInverse" />

            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:background="@color/colorClear"
                android:shadowColor="@color/colorBackground"
                android:text="@string/text_clear"
                android:textColor="@color/colorText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="bottom"
                android:animateLayoutChanges="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_footer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/footer"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorTextInverse" />

                <TextView
                    android:id="@+id/tv_footer_forecast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="50dp"
                    android:autoLink="web"
                    android:text="@string/footer_forecast"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/floatingBtn"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
